--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "qrjs",
+  "name": "qr-js",
   "version": "1.0.0",
   "description": "Generate QR codes from the command line, optionally save them straight to file",
   "scripts": {
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/kevin-smets/qrjs.git"
+    "url": "git+https://github.com/kevin-smets/qr-js.git"
   },
   "keywords": [
     "qrcode",
@@ -21,9 +21,9 @@
   "author": "Kevin Smets",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/kevin-smets/qrjs/issues"
+    "url": "https://github.com/kevin-smets/qr-js/issues"
   },
-  "homepage": "https://github.com/kevin-smets/qrjs#readme",
+  "homepage": "https://github.com/kevin-smets/qr-js#readme",
   "dependencies": {
     "base64-img": "^1.0.3",
     "yaqrcode": "^0.2.1",
